--- a/package.json
+++ b/package.json
@@ -35,5 +35,10 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.6",
     "vite": "^4.1.0"
+  },
+  "engines":{
+    "node": "^20.13.1",
+    "npm": "^10.5.2"
+
   }
 }
